--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
@@ -24,7 +24,8 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter] public Season Season { get; set; }
+    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
+
     [Parameter] public IEnumerable<SeasonEngine> EngineEntrants { get; set; } = Enumerable.Empty<SeasonEngine>();
     [Parameter] public EventCallback<SeasonEngine?> OnEditorOpen { get; set; }
 
