--- a/SimTECH/SimTECH/Pages/Season/Settings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Settings.razor
@@ -12,35 +12,35 @@
     <MudItem xs="4">
         <MudPaper Elevation="15" Class="pa-4 mud-height-full">
             <MudText Typo="Typo.h5">Settings 1</MudText>
-            <MudTextField @bind-Value="Season.Year" Label="Year" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.MaximumDriversInRace" Label="MaximumDriversInRace" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.QualifyingFormat" Text="@($"{Season.QualifyingFormat}")" Label="Qualifying format" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.QualifyingAmountQ2" Label="QualifyingAmountQ2" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.QualifyingAmountQ3" Label="QualifyingAmountQ3" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.QualifyingRNG" Label="QualifyingRNG" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.RunAmountSession" Label="RunAmountSession" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.GridBonus" Label="GridBonus" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.PointsPole" Label="PointsPole" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.PointsFastestLap" Label="PointsFastestLap" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.Year" Label="Year" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.MaximumDriversInRace" Label="MaximumDriversInRace" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.QualifyingFormat" Text="@($"{OverviewModel.Season.QualifyingFormat}")" Label="Qualifying format" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.QualifyingAmountQ2" Label="QualifyingAmountQ2" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.QualifyingAmountQ3" Label="QualifyingAmountQ3" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.QualifyingRNG" Label="QualifyingRNG" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.RunAmountSession" Label="RunAmountSession" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.GridBonus" Label="GridBonus" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.PointsPole" Label="PointsPole" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.PointsFastestLap" Label="PointsFastestLap" ReadOnly="true"></MudTextField>
         </MudPaper>
     </MudItem>
     <MudItem xs="4">
         <MudPaper Elevation="15" Class="pa-4 mud-height-full">
             <MudText Typo="Typo.h5">Settings 2</MudText>
-            <MudTextField @bind-Value="Season.RngMinimum" Label="RngMinimum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.RngMaximum" Label="RngMaximum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.PitMinimum" Label="PitMinimum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.PitMaximum" Label="PitMaximum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.PitCostSubtractCaution" Label="Subtract from pit when SC" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.MistakeMinimum" Label="MistakeMinimum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.MistakeMaximum" Label="MistakeMaximum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="Season.MistakeRolls" Label="MistakeRolls" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.RngMinimum" Label="RngMinimum" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.RngMaximum" Label="RngMaximum" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.PitMinimum" Label="PitMinimum" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.PitMaximum" Label="PitMaximum" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.PitCostSubtractCaution" Label="Subtract from pit when SC" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.MistakeMinimum" Label="MistakeMinimum" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.MistakeMaximum" Label="MistakeMaximum" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.MistakeRolls" Label="MistakeRolls" ReadOnly="true"></MudTextField>
         </MudPaper>
     </MudItem>
     <MudItem xs="4">
         <MudPaper Elevation="15" Class="pa-4 mud-height-full">
         <MudText Typo="Typo.h5">Points per position</MudText>
-            @if (Season.PointAllotments?.Any() == true)
+            @if (OverviewModel.Season.PointAllotments?.Any() == true)
             {
                 <MudSimpleTable Dense="true">
                     <thead>
@@ -50,7 +50,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var allotment in Season.PointAllotments)
+                        @foreach (var allotment in OverviewModel.Season.PointAllotments)
                         {
                             <tr>
                                 <td class="font-caption">@allotment.Position</td>
@@ -69,14 +69,15 @@
 </MudGrid>
 
 @code {
-    [CascadingParameter] public Season Season { get; set; }
+    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
+
     [Parameter] public EventCallback OnEditorOpen { get; set; }
 
     private string qualyFormat = string.Empty;
 
     protected override void OnInitialized()
     {
-        qualyFormat = Season.QualifyingFormat.ToString();
+        qualyFormat = OverviewModel.Season.QualifyingFormat.ToString();
     }
 
     async Task UpdateSeason() => await OnEditorOpen.InvokeAsync();
