--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -3,7 +3,7 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Races</MudText>
             <MudSpacer />
-            @if (Season.State == State.Concept)
+            @if (OverviewModel.Season.State == State.Concept)
             {
                 <MudButton StartIcon="@Icons.Material.Outlined.CarRepair"
                            IconColor="Color.Primary"
@@ -92,7 +92,7 @@
             </MudTd>
             <MudTd>
                 <MudButtonGroup Size="@Size.Small">
-                    @if (Season.State == State.Active && (context.Round == nextRound))
+                    @if (OverviewModel.Season.State == State.Active && (context.Round == nextRound))
                     {
                         <MudIconButton Icon="@Icons.Material.Outlined.Logout" OnClick="@(() => GoToRace(context.Round))" />
                     }
@@ -100,7 +100,7 @@
                     {
                         <MudIconButton Icon="@Icons.Material.Filled.Flag" OnClick="@(() => GoToRace(context.Round))" />
                     }
-                    else if (Season.State != State.Closed)
+                    else if (OverviewModel.Season.State != State.Closed)
                     {
                         <MudIconButton Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateRace(context.Race))" />
                         <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await DeleteRace(context.RaceId))" />
@@ -112,7 +112,7 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter] public Season Season { get; set; }
+    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
 
     [Parameter] public IEnumerable<Race> Races { get; set; } = Enumerable.Empty<Race>();
     [Parameter] public IEnumerable<Result> Results { get; set; } = Enumerable.Empty<Result>();
