--- a/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
@@ -4,10 +4,10 @@
             <MudText Typo="Typo.h3">Power rankings</MudText>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="PowerRankListing" Items="@PowahList" Dense="true" Loading="@loading">
+    <MudDataGrid T="PowerRankingItem" Items="@PowahList" Dense="true" Loading="@loading">
         <Columns>
-            <HierarchyColumn T="PowerRankListing" />
-            <TemplateColumn T="PowerRankListing" SortBy="e => e.DriverName" Title="Driver">
+            <HierarchyColumn T="PowerRankingItem" />
+            <TemplateColumn T="PowerRankingItem" SortBy="e => e.DriverName" Title="Driver">
                 <CellTemplate>
                     <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
                         <MudText Typo="Typo.body2" Class="overflow-hider">@context.Item.DriverName</MudText>
@@ -15,7 +15,7 @@
                     </MudStack>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="PowerRankListing"
+            <TemplateColumn T="PowerRankingItem"
                             SortBy="e => e.DriverNumber"
                             Title="NO"
                             HeaderClass="number-col hide-sort-icons"
@@ -29,7 +29,7 @@
             <PropertyColumn Property="e => e!.Manufacturer" Title="Supplier" HeaderClass="hide-sort-icons" />
             <PropertyColumn Property="e => e!.QualyPower" Title="Q.PWR" HeaderClass="hide-sort-icons" CellClass="font-caption" />
             <PropertyColumn Property="e => e!.RacePower" Title="R.PWR" HeaderClass="hide-sort-icons" CellClass="font-caption" />
-            <TemplateColumn T="PowerRankListing" Title="A/C/P" SortBy="e => e.CarPartAvg" HeaderClass="hide-sort-icons">
+            <TemplateColumn T="PowerRankingItem" Title="A/C/P" SortBy="e => e.CarPartAvg" HeaderClass="hide-sort-icons">
                 <CellTemplate>
                     <MudText Typo="Typo.caption">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
                 </CellTemplate>
@@ -96,7 +96,7 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter] public Season Season { get; set; }
+    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
 
     [Parameter] public IEnumerable<SeasonDriver> SeasonDrivers { get; set; } = Enumerable.Empty<SeasonDriver>();
     [Parameter] public IEnumerable<SeasonTeam> SeasonTeams { get; set; } = Enumerable.Empty<SeasonTeam>();
@@ -105,7 +105,7 @@
     [Parameter] public IEnumerable<Trait> Traits { get; set; } = Enumerable.Empty<Trait>();
     [Parameter] public int TeamRoleCarModifier { get; set; }
 
-    private List<PowerRankListing> PowahList = new();
+    private List<PowerRankingItem> PowahList = new();
 
     private bool loading = true;
 
@@ -130,7 +130,7 @@
 
             var basePower = driver.Skill + driver.RetrieveStatusBonus(TeamRoleCarModifier) + team.BaseValue + engine.Power;
 
-            var listing = new PowerRankListing
+            var listing = new PowerRankingItem
             {
                 DriverName = driver.Driver.FullName,
                 DriverNumber = driver.Number,
@@ -164,37 +164,5 @@
         loading = false;
     }
 
-    private Func<PowerRankListing, string> SimpleCellStyle => power => ViewHelper.SetBorderRightStyle(power.Colour);
-
-    internal class PowerRankListing
-    {
-        public string DriverName { get; set; }
-        public int DriverNumber { get; set; }
-        public Country Nationality { get; set; }
-
-        public string TeamName { get; set; }
-        public string Colour { get; set; } = Constants.DefaultColour;
-        public string Accent { get; set; } = Constants.DefaultAccent;
-
-        public string Engine { get; set; }
-
-        public string Manufacturer { get; set; }
-
-        public int QualyPower { get; set; }
-        public int RacePower { get; set; }
-        public int Aero { get; set; }
-        public int Chassis { get; set; }
-        public int Powertrain { get; set; }
-        public int DriverRel { get; set; }
-        public int CarRel { get; set; }
-        public int EngineRel { get; set; }
-        public int LifeBonus { get; set; }
-        public int WearMin { get; set; }
-        public int WearMax { get; set; }
-        public int RngMin { get; set; }
-        public int RngMax { get; set; }
-
-        public double CarPartAvg { get; set; }
-        public double RelAvg { get; set; }
-    }
+    private Func<PowerRankingItem, string> SimpleCellStyle => power => ViewHelper.SetBorderRightStyle(power.Colour);
 }
