Did some bug cleaning, because bugs are stoopid

--- a/SimTECH/SimTECH/Pages/Contracts/ContractManager.razor
+++ b/SimTECH/SimTECH/Pages/Contracts/ContractManager.razor
@@ -71,7 +71,7 @@
 
         List<Driver> drivers;
         if (onlyCertainDrivers)
-            drivers = await _driverService.GetLeagueDrivers(selectedLeagueId);
+            drivers = await _driverService.GetDriversFromLeague(selectedLeagueId);
         else
             drivers = await _driverService.GetDrivers();
 
