--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -47,7 +47,7 @@
                     @if (calendarLoaded)
                     {
                         <Calendar Races="@OverviewModel.Races"
-                                  Results="@OverviewModel.Results"
+                                  Results="@OverviewModel.ClassResults()"
                                   SeasonDrivers="@OverviewModel.ClassDrivers()"
                                   SeasonTeams="@OverviewModel.ClassTeams()"
                                   Climates="@Climates"
