--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -71,7 +71,7 @@
             new BreadcrumbItem("Drivers", href: "drivers", disabled: true),
         });
 
-        currentDrivers = await _driverService.GetCurrentDrivers();
+        currentDrivers = await _driverService.GetDriversInActiveSeason();
         drivers = await _driverService.GetDrivers();
     }
 
