--- a/SimTECH/SimTECH/Pages/Traits/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Traits/TraitAssign.razor
@@ -189,7 +189,7 @@
                 {
                     List<Driver> drivers;
                     if (leagueFilter != 0)
-                        drivers = await _driverService.GetLeagueDrivers(leagueFilter);
+                        drivers = await _driverService.GetDriversFromLeague(leagueFilter);
                     else
                         drivers = await _driverService.GetDrivers();
 
