--- a/SimTECH/SimTECH/Pages/Racing/CommonSession.razor
+++ b/SimTECH/SimTECH/Pages/Racing/CommonSession.razor
@@ -21,9 +21,11 @@
         <MudTh></MudTh>
     </HeaderContent>
     <RowTemplate>
-        <MudTd Class="number-col d-flex flex-row align-items-center gap-1">
-            <DriverPosition Number="@context.Position" />
-            <sup>@context.AbsolutePosition</sup>
+        <MudTd Class="number-col">
+            <div class="d-flex flex-row align-items-center gap-1">
+                <DriverPosition Number="@context.Position" />
+                <sup>@context.AbsolutePosition</sup>
+            </div>
         </MudTd>
         <MudTd Class="accent-cell">
             <SmolAccent Colour="@context.Colour" />
